<resources>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="folders">Folders</string>
    <string name="add_a_folder">Add a folder</string>
    <string name="edit_a_folder">Edit a folder</string>
    <string name="folder_name">Folder Name</string>
    <string name="preview">Preview</string>
    <string name="add">Add</string>
    <string name="back">Back</string>
    <string name="delete_folder">Delete Folder</string>
    <string name="delete_folder_warning">Deleting this folder will delete all bookmarks in this folder as well. Proceed?</string>
    <string name="helper_error_invalid_link">Invalid link</string>
    <string name="add_a_bookmark">Add a Bookmark</string>
    <string name="edit_a_bookmark">Edit a Bookmark</string>
    <string name="url">URL</string>
    <string name="enter_a_title_for_the_bookmark">Enter a title for the bookmark</string>
    <string name="title">Title</string>
    <string name="no_permission">No permission</string>
    <string name="grant_permission">To be able to show an add bookmark screen we need proper permissions</string>
    <string name="bookmark_channel_id">BOOKMARK_CHANNEL</string>
    <string name="bookmark_channel_name">Bookmarks</string>
    <string name="bookmark_channel_description">This channel concerns with notifications related to bookmarks</string>
</resources>