<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bookmark_folder_background">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_margin_bookmark_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/sideMargins" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_margin_bookmark_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/sideMargins" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            style="@style/ListTitleTextCollapsed"
            android:text="@string/add_a_bookmark"
            app:layout_constraintEnd_toStartOf="@+id/right_margin_bookmark_service"
            app:layout_constraintStart_toStartOf="@+id/left_margin_bookmark_service"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            style="@style/PageContentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/folder_name"
            app:layout_constraintStart_toStartOf="@+id/left_margin_bookmark_service"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView3"
            style="@style/PageContentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/title"
            app:layout_constraintStart_toStartOf="@+id/left_margin_bookmark_service"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

        <TextView
            android:id="@+id/textView5"
            style="@style/PageContentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/url"
            app:layout_constraintStart_toStartOf="@+id/left_margin_bookmark_service"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_url"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/right_margin_bookmark_service"
            app:layout_constraintStart_toStartOf="@+id/left_margin_bookmark_service"
            app:layout_constraintTop_toBottomOf="@+id/textView5">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_bookmark_url"
                android:layout_width="match_parent"
                android:maxLines="1"
                android:singleLine="true"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:placeholderText="@string/enter_a_title_for_the_bookmark"
            app:layout_constraintEnd_toStartOf="@+id/right_margin_bookmark_service"
            app:layout_constraintStart_toStartOf="@+id/left_margin_bookmark_service"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_bookmark_title"
                android:layout_width="match_parent"
                android:maxLines="1"
                android:singleLine="true"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            app:layout_constraintEnd_toStartOf="@+id/right_margin_bookmark_service"
            app:layout_constraintStart_toStartOf="@+id/left_margin_bookmark_service"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/folder_name_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:singleLine="true"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button"
            style="@style/Widget.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/right_margin_bookmark_service"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_url"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>