<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddBookmarkFolderFragment">


    <ImageButton
        android:id="@+id/btn_back"
        style="@style/MenuIconButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:contentDescription="@string/back"
        app:layout_constraintStart_toStartOf="@+id/left_margin"
        app:layout_constraintTop_toTopOf="@+id/top_margin" />

    <TextView
        android:id="@+id/tv_title_collapsed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/add_a_folder"
        app:layout_constraintBottom_toBottomOf="@+id/btn_back"
        app:layout_constraintEnd_toStartOf="@+id/right_margin"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btn_back"
        app:layout_constraintTop_toTopOf="@+id/btn_back" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="btn_back,tv_title_collapsed" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="377dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/right_margin"
        app:layout_constraintStart_toStartOf="@+id/left_margin"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:placeholderText="Enter a folder name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_folder_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/folder_name"
        app:layout_constraintStart_toStartOf="@+id/left_margin"
        app:layout_constraintTop_toBottomOf="@id/barrier3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/preview"
        app:layout_constraintStart_toStartOf="@+id/left_margin"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/sideMargins" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/sideMargins" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/color_selector"
        android:layout_width="409dp"
        android:layout_height="200dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/sideMargins" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/sideMargins" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_bookmark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        app:layout_constraintBottom_toTopOf="@+id/bottom_margin"
        app:layout_constraintEnd_toStartOf="@+id/right_margin"
        app:layout_constraintTop_toBottomOf="@+id/color_selector"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>